samples/_failures_safe/1761420033_64cbce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_698b1817.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_698b1817.c:167:5: error: expected expression at end of input
  167 |     if (!queue_enqueue(&
      |     ^~
./samples/SAFE/__tmp_698b1817.c:167:10: error: too few arguments to function ‘queue_enqueue’
  167 |     if (!queue_enqueue(&
      |          ^~~~~~~~~~~~~
./samples/SAFE/__tmp_698b1817.c:126:5: note: declared here
  126 | int queue_enqueue(struct Queue *q, struct GraphNode *data) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_698b1817.c:167:5: error: expected declaration or statement at end of input
  167 |     if (!queue_enqueue(&
      |     ^~
